--- a/front-end/apps/package.json
+++ b/front-end/apps/package.json
@@ -71,7 +71,10 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.1.5"
+    "typescript": "~4.1.5",
+    "eslint-plugin-import": "latest",
+    "eslint-plugin-jsdoc": "latest",
+    "eslint-plugin-prefer-arrow": "latest"
   },
   "resolutions": {
     "webpack": "^5.0.0"
