Step 2 - Run the convert-tslint-to-eslint schematic on hospital

--- a/front-end/apps/angular.json
+++ b/front-end/apps/angular.json
@@ -2,7 +2,8 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "cli": {
     "analytics": false,
-    "packageManager": "yarn"
+    "packageManager": "yarn",
+    "defaultCollection": "@angular-eslint/schematics"
   },
   "version": 1,
   "newProjectRoot": "projects",
@@ -114,15 +115,11 @@
           }
         },
         "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
+          "builder": "@angular-eslint/builder:lint",
           "options": {
-            "tsConfig": [
-              "projects/hospital/tsconfig.app.json",
-              "projects/hospital/tsconfig.spec.json",
-              "projects/hospital/e2e/tsconfig.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
+            "lintFilePatterns": [
+              "projects/hospital/**/*.ts",
+              "projects/hospital/**/*.html"
             ]
           }
         },
