--- a/back-end/odontology/pom.xml
+++ b/back-end/odontology/pom.xml
@@ -52,6 +52,17 @@
             <version>1.3.1.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.ibm.db2</groupId>
+            <artifactId>jcc</artifactId>
+            <version>11.5.0.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
