--- a/back-end/pom.xml
+++ b/back-end/pom.xml
@@ -27,6 +27,7 @@
         <module>app</module>
 		<module>sgx-auth</module>
 		<module>hospital-shared</module>
+		<module>immunization</module>
 	</modules>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
