tg-4207 backoffice - No se puede eliminar matricula

--- a/dba/liquibase/incrementales-v1_18.yml
+++ b/dba/liquibase/incrementales-v1_18.yml
@@ -903,3 +903,40 @@ databaseChangeLog:
                     INSERT INTO tooth(sctid,code,quadrant_code,posterior) VALUES('245625007',2,6,false);
                     INSERT INTO tooth(sctid,code,quadrant_code,posterior) VALUES('245633008',2,8,false);
                     INSERT INTO tooth(sctid,code,quadrant_code,posterior) VALUES('245640009',2,7,false);
+
+
+    - changeSet:
+          id: add-auditable-columns-healthcare_professional
+          author: mscooper
+          changes:
+              - addColumn:
+                    tableName: healthcare_professional
+                    columns:
+                        - column:
+                              constraints:
+                                  nullable: false
+                              name: deleted
+                              type: BOOLEAN
+                              defaultValue: ${boolean.false}
+                        - column:
+                              name: deleted_by
+                              type: INTEGER
+                        - column:
+                              name: deleted_on
+                              type: DATETIME
+                        - column:
+                              name: created_on
+                              type: datetime
+                        - column:
+                              name: updated_on
+                              type: datetime
+                        - column:
+                              name: created_by
+                              type: int
+                              constraints:
+                                  nullable: true
+                        - column:
+                              name: updated_by
+                              type: int
+                              constraints:
+                                  nullable: true
