--- a/dba/liquibase/main.yml
+++ b/dba/liquibase/main.yml
@@ -112,3 +112,6 @@ databaseChangeLog:
 - include:
     file: incrementales-v1_18.yml
     relativeToChangelogFile: true
+- include:
+    file: incrementales-v1_19.yml
+    relativeToChangelogFile: true
