Comienza desarrollo de 1.20

--- a/dba/liquibase/main.yml
+++ b/dba/liquibase/main.yml
@@ -115,3 +115,7 @@ databaseChangeLog:
 - include:
     file: incrementales-v1_19.yml
     relativeToChangelogFile: true
+
+- include:
+    file: incrementales-v1_20.yml
+    relativeToChangelogFile: true
